fix: adding a missing color attribute to the login form

--- a/src/shared/LoginForm/loginForm.scss
+++ b/src/shared/LoginForm/loginForm.scss
@@ -5,6 +5,7 @@
   align-items: flex-start;
   flex-direction: column;
   gap: 1rem;
+  color: $black;
 
   &__header_login {
     font-size: 2rem;
